--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,47 +1,183 @@
 {
+  "id": "guest-manager-pwa",
   "short_name": "Guest Manager",
   "name": "Guest Management Application",
-  "description": "Manage your guest list, with offline capabilities",
+  "description": "Manage your guest list, with offline capabilities and seamless offline/online synchronization",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon",
+      "purpose": "any"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "logo192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "logo512.svg",
       "type": "image/svg+xml",
       "sizes": "512x512",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "logo512.svg",
+      "type": "image/svg+xml",
+      "sizes": "512x512",
+      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay"],
   "theme_color": "#3b82f6",
   "background_color": "#ffffff",
-  "orientation": "portrait",
-  "categories": ["productivity", "utilities"],
-  "screenshots": [],
+  "orientation": "portrait-primary",
+  "dir": "ltr",
+  "lang": "en",
+  "categories": ["productivity", "utilities", "events"],
+  "screenshots": [
+    {
+      "src": "screenshots/desktop1.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Guest List Management"
+    },
+    {
+      "src": "screenshots/desktop2.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Adding New Guests"
+    },
+    {
+      "src": "screenshots/mobile1.png",
+      "sizes": "750x1334",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile Guest List View"
+    },
+    {
+      "src": "screenshots/mobile2.png",
+      "sizes": "750x1334",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Mobile Guest Details"
+    }
+  ],
   "prefer_related_applications": false,
+  "related_applications": [],
   "scope": "/",
+  "scope_extensions": [
+    {
+      "origin": "https://your-frontend-domain.com"
+    }
+  ],
+  "launch_handler": {
+    "client_mode": ["navigate-existing", "auto"]
+  },
   "shortcuts": [
     {
       "name": "Add Guest",
       "short_name": "Add",
       "description": "Add a new guest",
-      "url": "/?action=add"
+      "url": "/?action=add",
+      "icons": [
+        {
+          "src": "shortcuts/add.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
     },
     {
       "name": "View Invited",
       "short_name": "Invited",
       "description": "View invited guests",
-      "url": "/?filter=invited"
+      "url": "/?filter=invited",
+      "icons": [
+        {
+          "src": "shortcuts/invited.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
+  "file_handlers": [
+    {
+      "action": "/import",
+      "accept": {
+        "text/csv": [".csv"]
+      },
+      "icons": [
+        {
+          "src": "file_handlers/csv.png",
+          "sizes": "96x96",
+          "type": "image/png"
+        }
+      ],
+      "launch_type": "single-client"
+    }
+  ],
+  "share_target": {
+    "action": "/share-target",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "guests",
+          "accept": ["text/csv", ".csv"]
+        }
+      ]
+    }
+  },
+  "handle_links": "preferred",
+  "protocol_handlers": [
+    {
+      "protocol": "web+guestlist",
+      "url": "/protocol?guestlist=%s"
+    }
+  ],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  "widgets": [
+    {
+      "name": "Guest Stats",
+      "tag": "guest-stats",
+      "description": "Shows a summary of your guest list",
+      "template": "stats-template",
+      "ms_ac_template": "widgets/stats.json",
+      "data": "widgets/guest-stats-data.json",
+      "screenshots": [
+        {
+          "src": "widgets/stats-screenshot.png",
+          "sizes": "600x400",
+          "label": "Guest Stats Widget"
+        }
+      ],
+      "icons": [
+        {
+          "src": "widgets/stats-icon.png",
+          "sizes": "96x96"
+        }
+      ],
+      "auth": false,
+      "update": 86400
     }
   ]
 }
