--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,32 +1,29 @@
 {
   "id": "guest-manager-pwa",
   "short_name": "Guest Manager",
-  "name": "Guest List Manager",
+  "name": "Guest Manager App",
   "description": "Manage your guest list, with offline capabilities and seamless offline/online synchronization",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon",
-      "purpose": "any"
+      "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any maskable"
+      "sizes": "192x192"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any maskable"
+      "sizes": "512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "display_override": ["window-controls-overlay"],
-  "theme_color": "#4F46E5",
+  "theme_color": "#3b82f6",
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
   "dir": "ltr",
