--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,64 +1,79 @@
 {
   "id": "guest-manager-pwa",
-  "short_name": "Guest Manager",
-  "name": "Guest Manager App",
-  "description": "Manage your guest list, with offline capabilities and seamless offline/online synchronization",
+  "short_name": "Guest List",
+  "name": "Guest List Manager",
+  "description": "Manage your guest list efficiently",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "64x64",
       "type": "image/x-icon"
     },
     {
-      "src": "/logo192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/logo512.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any"
     }
   ],
-  "start_url": "/",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "display_override": ["window-controls-overlay"],
   "theme_color": "#3b82f6",
   "background_color": "#ffffff",
-  "orientation": "portrait-primary",
+  "orientation": "portrait",
   "dir": "ltr",
   "lang": "en",
-  "categories": ["productivity", "utilities", "events"],
+  "categories": ["productivity", "utilities"],
   "shortcuts": [
     {
       "name": "Add Guest",
       "short_name": "Add",
       "description": "Add a new guest",
       "url": "/?action=add",
-      "icons": [
-        {
-          "src": "/logo192.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "icons": [{ "src": "/shortcuts/add.png", "sizes": "96x96" }]
     },
     {
       "name": "View Invited",
       "short_name": "Invited",
       "description": "View invited guests",
       "url": "/?filter=invited",
-      "icons": [
-        {
-          "src": "/logo192.png",
-          "sizes": "96x96",
-          "type": "image/png"
-        }
-      ]
+      "icons": [{ "src": "/shortcuts/invited.png", "sizes": "96x96" }]
     }
   ],
   "handle_links": "preferred",
-  "scope": "/"
+  "scope": "/",
+  "screenshots": [
+    {
+      "src": "/screenshots/mobile1.png",
+      "type": "image/png",
+      "sizes": "750x1334",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/mobile2.png",
+      "type": "image/png",
+      "sizes": "750x1334",
+      "form_factor": "narrow"
+    },
+    {
+      "src": "/screenshots/desktop1.png",
+      "type": "image/png",
+      "sizes": "1280x720",
+      "form_factor": "wide"
+    },
+    {
+      "src": "/screenshots/desktop2.png",
+      "type": "image/png",
+      "sizes": "1280x720",
+      "form_factor": "wide"
+    }
+  ],
+  "prefer_related_applications": false
 }
