--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "guest-manager-pwa",
-  "short_name": "Guest Mgr",
-  "name": "Guest Manager",
+  "short_name": "Guest Manager",
+  "name": "Guest Management Application",
   "description": "Manage your guest list easily with online and offline capabilities",
   "icons": [
     {
@@ -10,22 +10,22 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "/logo192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "/logo512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
   ],
-  "start_url": "/?source=pwa",
+  "start_url": ".",
   "display": "standalone",
   "display_override": ["window-controls-overlay"],
-  "theme_color": "#4f46e5",
+  "theme_color": "#000000",
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
   "dir": "ltr",
