--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,13 +10,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "/logo192.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "/logo512.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
@@ -24,61 +24,11 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "display_override": ["window-controls-overlay"],
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "orientation": "portrait-primary",
   "dir": "ltr",
   "lang": "en-US",
   "categories": ["productivity", "business"],
-  "shortcuts": [
-    {
-      "name": "Add Guest",
-      "short_name": "Add",
-      "description": "Add a new guest",
-      "url": "/?action=addGuest",
-      "icons": [{ "src": "/shortcuts/add.png", "sizes": "96x96" }]
-    },
-    {
-      "name": "View Invited",
-      "short_name": "Invited",
-      "description": "View invited guests",
-      "url": "/?filter=invited",
-      "icons": [{ "src": "/shortcuts/invited.png", "sizes": "96x96" }]
-    }
-  ],
-  "handle_links": "preferred",
-  "scope": "/",
-  "screenshots": [
-    {
-      "src": "screenshot1.png",
-      "sizes": "1280x720",
-      "type": "image/png"
-    },
-    {
-      "src": "/screenshots/mobile1.png",
-      "type": "image/png",
-      "sizes": "750x1334",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/mobile2.png",
-      "type": "image/png",
-      "sizes": "750x1334",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/desktop1.png",
-      "type": "image/png",
-      "sizes": "1280x720",
-      "form_factor": "wide"
-    },
-    {
-      "src": "/screenshots/desktop2.png",
-      "type": "image/png",
-      "sizes": "1280x720",
-      "form_factor": "wide"
-    }
-  ],
-  "prefer_related_applications": false
+  "scope": "/"
 }
