--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -10,19 +10,19 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "./logo192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "./logo512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#3498db",
   "background_color": "#f0f2f5",
@@ -30,5 +30,5 @@
   "dir": "ltr",
   "lang": "en-US",
   "categories": ["productivity", "business"],
-  "scope": "/"
+  "scope": "./"
 }
