Resolve merge conflicts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,14 @@
   },
   "scripts": {
     "preinstall": "node scripts/fix-deployment.js || true",
-    "start": "react-scripts start",
+    "start": "node scripts/reset-offline-mode.js && react-scripts start",
     "prebuild": "node scripts/verify-build.js && node scripts/fix-merge-conflicts.js && node scripts/fix-deployment.js",
     "build": "node scripts/generate-fallback-icons.js && CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "build:windows": "node scripts/generate-fallback-icons.js && set \"CI=false\" && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "node scripts/remove-source-maps.js"
+    "postbuild": "node scripts/remove-source-maps.js",
+    "reset-offline": "node scripts/reset-offline-mode.js"
   },
   "eslintConfig": {
     "extends": [
