--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -4,3 +4,14 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 # Alternative approach (more secure): specify allowed hosts
 # WDS_SOCKET_HOST=localhost
 # HOST=localhost
+
+# Define API URL for development to ensure connectivity
+REACT_APP_API_BASE_URL=http://localhost:5002/api
+REACT_APP_API_TIMEOUT=15000
+REACT_APP_DISABLE_OFFLINE_MODE=true
+
+# Debug settings
+REACT_APP_DEBUG_MODE=true
+
+# Backend server port (change if needed)
+PORT=3000
