--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.0",
@@ -12,14 +13,17 @@
   },
   "scripts": {
     "preinstall": "node scripts/fix-deployment.js || true",
-    "start": "node scripts/reset-offline-mode.js && react-scripts start",
+    "prestart": "node scripts/reset-offline-mode.js && node scripts/check-backend.js",
+    "start": "react-scripts start",
     "prebuild": "node scripts/verify-build.js && node scripts/fix-merge-conflicts.js && node scripts/fix-deployment.js",
     "build": "node scripts/generate-fallback-icons.js && CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "build:windows": "node scripts/generate-fallback-icons.js && set \"CI=false\" && set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postbuild": "node scripts/remove-source-maps.js",
-    "reset-offline": "node scripts/reset-offline-mode.js"
+    "reset-offline": "node scripts/reset-offline-mode.js",
+    "check-backend": "node scripts/check-backend.js",
+    "check": "node scripts/check-backend.js"
   },
   "eslintConfig": {
     "extends": [
